# gemini_adk_lifetracker_demo

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  cloud_scheduler_newsletter_example.sh  generate_openapi.py  openapi.yaml  pyproject.toml  server.py  tracing.py
api/: dependencies.py  exceptions.py
api/routers/: metrics.py  newsletter.py  users.py
eval/: conversation.py
gemini_adk_demo/: __init__.py  agent.py  core.py  crud.py  custom_agent.py  database.py  models.py  prompt.py  schemas.py
gemini_adk_demo/shared_libraries/: constants.py  crud.py  models.py  schemas.py
gemini_adk_demo/sub_agents/architect/: agent.py  prompt.py
gemini_adk_demo/sub_agents/background_info/: agent.py  prompt.py
gemini_adk_demo/sub_agents/commander/: agent.py  prompt.py
gemini_adk_demo/sub_agents/judge/: agent.py  prompt.py
gemini_adk_demo/sub_agents/log_entry/: agent.py  prompt.py
gemini_adk_demo/sub_agents/task_manager/: agent.py  prompt.py
gemini_adk_demo/sub_agents/visionary/: agent.py  prompt.py
gemini_adk_demo/tools/: __init__.py  background_info.py  callbacks.py  file_io.py  log_entry.py  newsletter_sender.py  task_manager.py
